# unison

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .mailmap  .mergify.yml  .ormolu  .travis.yml  CONTRIBUTORS.markdown  CREDITS.md  Dockerfile  IO.u  Input.hs  LICENSE  Main.hs  README.md  SETUP.sh  Setup.lhs  Sync.hs  Vagrantfile  a.txt  after  arya-relational-namespace.sql  azure-pipelines.yml  b.txt  before  build-and-run  build-with-stack.dockerfile  cabal.project  component_mismatches.csv  config  ddl.sql  default.nix  defaults.yaml  dev-ui-install.sh  development.markdown  doc-index-124.html  doc-index-33.html  (+78 more)
codebase2/: CHANGELOG.md  LICENSE  notes.txt  unison-codebase2a.cabal
codebase2/app/: Main.hs
codebase2/codebase/: package.yaml  unison-codebase.cabal
codebase2/codebase-sqlite/: package.yaml  unison-codebase-sqlite.cabal
codebase2/codebase-sqlite-hashing-v2/: package.yaml  unison-codebase-sqlite-hashing-v2.cabal
codebase2/codebase-sqlite/sql/: 001-temp-entity-tables.sql  002-reflog-table.sql  003-namespace-statistics.sql  004-fix-scoped-name-lookup-tables.sql  004-project-tables.sql  005-project-tables.sql  006-add-name-lookup-mounts.sql  006-most-recent-branch-table.sql  007-add-name-lookup-mounts.sql  008-add-most-recent-namespace-table.sql  009-add-squash-cache-table.sql  010-ensure-squash-cache-table.sql  011-cd-to-project-root.sql  012-add-current-project-path-table.sql  013-add-project-branch-reflog-table.sql  014-add-project-branch-causal-hash-id.sql  015-syncv2-temp-entity-tables.sql  create-index.sql  create.sql
codebase2/codebase-sync/: package.yaml  unison-codebase-sync.cabal
codebase2/codebase-sync/benchmarks/: Main.hs
codebase2/core/: package.yaml  unison-core.cabal
codebase2/core/Unison/: ConstructorType.hs  ContentAddressable.hs  NameSegment.hs  ShortHash.hs
codebase2/editor/: unison-editor.cabal
codebase2/language/: unison-language.cabal
codebase2/runtime/: unison-runtime.cabal
codebase2/sql/: create-index.sql  create.sql
codebase2/syntax/: unison-syntax.cabal
codebase2/util/: package.yaml  unison-util.cabal
codebase2/util-base32hex/: package.yaml  unison-util-base32hex.cabal
codebase2/util-hash/: package.yaml  unison-util-hash.cabal
codebase2/util-hashable-v1/: package.yaml  unison-util-hashable-v1.cabal
codebase2/util-hashable-v1-impl/: package.yaml  unison-util-hashable-v1-impl.cabal
codebase2/util-process/: package.yaml  unison-util-process.cabal
codebase2/util-serialization/: package.yaml  unison-util-serialization.cabal
codebase2/util-term/: package.yaml  unison-util-term.cabal
codebase2/util/bench/: Main.hs
editor/: .gitignore  LICENSE  Main.elm  README.md  cache  common-setup.sh  default.nix  editor.html  elm-package.json  explorer.html  installNix.sh  launch-editor.sh  make  make-editor-html  packages.nix  shared-src  shell  shell.nix  shell.sh  stack.yaml  unison-editor.cabal
editor/Elmz/: Distance.elm  Layout.elm  Maybe.elm  Moore.elm  Movement.elm  Pattern.elm  Selection1D.elm  Signal.elm
editor/Elmz/Json/: Decoder.elm  Encoder.elm
editor/Unison/: Action.elm  Components.elm  Editor.elm  Explorer.elm  Hash.elm  Jsonify.elm  Layout.elm  Metadata.elm  Node.elm  Panel.elm  Parser.elm  Path.elm  Reference.elm  Scope.elm  Stream.elm  Styles.elm  Term.elm  Terms.elm  Trie.elm  Type.elm  Var.elm  View.elm
editor/fonts/fira-code.webfont/: FONTLOG.txt  fira-code_regular.eot  webfont.css
editor/include/: fonts.js  latofont.js
editor/main/: default.nix  shell.nix  unison-editor.cabal
editor/main/src/: HelloWorld.hs
editor/src/: Editor.hs  Execute.elm  ExplorerTest.hs  HelloWorld.hs  Messages.elm
editor/src/Elmz/: Layout.elm  Matcher.elm  Maybe.elm  Mealy.elm  Moore.elm  Movement.elm  Parser.elm  Result.elm  Selection1D.elm  Signal.elm  Trie.elm  Void.elm
editor/src/Native/: Execute.js  Messages.js
editor/src/Unison/: Action.elm  DocView.hs  Dom.hs  EditableTerm.elm  Editor.elm  Explorer.elm  Explorer.hs  HTML.hs  Hash.elm  LiteralParser.hs  Metadata.elm  Node.elm  Parser.hs  Path.elm  Reference.elm  Scope.elm  SearchboxParser.elm  Signals.hs  Styles.elm  Symbol.elm  Term.elm  TermExplorer.elm  TermExplorer.hs  TermSearchboxParser.hs  Terms.elm  Type.elm  UI.hs  Var.elm  View.elm  Woot.hs
editor/stylesheets/: reset.css  styles.css
haskell-src/parser-data/: unison-parser-data.cabal
node/: cabal.config  default.nix  shell.nix  shell.sh  unison-node.cabal  unison.cabal
node/properties/: properties.hs
node/src/: Codebase.hs  Container.hs  Main.hs  Node.hs  Unison.hs  Worker.hs
node/src/Unison/: ABT.hs  A_Eval.hs  A_Hash.hs  A_Node.hs  A_Reference.hs  A_Term.hs  A_TermEdit.hs  A_TermPath.hs  A_Type.hs  A_Typechecker.hs  CodebaseServer.hs  Config.hs  Digest.hs  Distance.hs  Eval.hs  Hash.hs  (+20 more)
node/tests/: Suite.hs  html.u  pingpong.u
parser-typechecker/: .hie-wrapper.sh  default.nix  package.yaml  result  shell.nix  unison-parser-typechecker.cabal
parser-typechecker-test/: unison-parser-typechecker-test.cabal
parser-typechecker-test/src/: Suite.hs
parser-typechecker/benchmarks/: Main.hs
parser-typechecker/bootstrap/: Bootstrap.hs
parser-typechecker/haskellruntimetest/: Main.hs
parser-typechecker/prettyprintdemo/: Main.hs
parser-typechecker/src/: Bootstrap.hs
parser-typechecker/testSuite/: Suite.hs
parser-typechecker/tests/: Suite.hs
parser-typechecker/transcripts/: Transcripts.hs
parser-typechecker/unison/: ArgParse.hs  Main.hs  Options.hs  Version.hs
parser-typechecker/unison2/: Main.hs
parser-typechecker/unisonold/: Main.hs
parser-typechecker/watcher/: Main.hs
shared/: default.nix  runtests.sh  shell.nix  shell.sh  unison-shared.cabal
shared/tests/: Suite.hs
unison-core/: package.yaml  unison-core.cabal  unison-core1.cabal
unison-core-test/: unison-core-test.cabal
unison-core/test/: Main.hs
unison-syntax/: package.yaml  unison-syntax.cabal
unison-syntax/test/: Main.hs
yaks/easytest/: LICENSE  README.markdown  default.nix  easytest.cabal  shell.nix
yaks/parsec-layout/: LICENSE  parsec-layout.cabal
(+24404 files in other folders)
