name:          unison
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano 
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors 
synopsis:      A purely functional language with transparent remote execution 
description:   - 

build-type:    Custom
extra-source-files:
  -- .travis.yml
  --.vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown

data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/platform.git

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src/shared

  exposed-modules:
    Unison.ABT
    Unison.Distance
    Unison.Eval
    Unison.Hash
    Unison.JSON
    Unison.Kind
    Unison.Metadata
    Unison.Note
    Unison.Reference
    Unison.Symbol
    Unison.Term
    Unison.TermEdit
    Unison.Type

  build-depends:
    aeson,
    base,
    base64-bytestring,
    bytestring,
    containers,
    mtl,
    text,
    transformers,
    vector

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

executable node
  main-is: Node.hs
  hs-source-dirs: src/node
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    aeson,
    applicative-extras,
    attoparsec,
    base,
    blaze-html,
    bytes,
    bytestring,
    cereal,
    containers,
    cryptohash,
    directory,
    filepath,
    http-types,
    mtl,
    prelude-extras,
    scotty,
    text,
    transformers,
    transformers-compat,
    unison,
    vector

test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        properties.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: properties
  other-modules:
    Syntax

  if !flag(properties)
    buildable: False
  else
    build-depends:
      unison,
      QuickCheck,
      quickcheck-instances,
      tagged,
      test-frameworka,
      test-framework-quickcheck2,
      test-framework-th
