name:          unison-editor
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano 
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors 
synopsis:      The Unison programming language and platform
description:   The Unison typechecker and node 

build-type:    Simple
extra-source-files:
  -- .travis.yml
  --.vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown

data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/platform.git

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison.DocView
    Unison.Dom
    Unison.Explorer
    Unison.HTML
    Unison.LiteralParser
    Unison.Parser
    Unison.TermExplorer
    Unison.UI

  build-depends:
    base,
    containers,
    data-default,
    free,
    ghcjs-dom,
    ghcjs-base,
    mtl,
    reflex,
    reflex-dom,
    semigroups,
    text,
    these,
    transformers,
    unison-shared

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

executable editor
  main-is: Editor.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    base,
    containers,
    data-default,
    free,
    ghcjs-dom,
    ghcjs-base,
    mtl,
    reflex,
    reflex-dom,
    semigroups,
    text,
    these,
    transformers,
    unison-shared,
    unison-editor

executable explorer
  main-is: ExplorerTest.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    base,
    containers,
    data-default,
    free,
    ghcjs-dom,
    ghcjs-base,
    mtl,
    reflex,
    reflex-dom,
    semigroups,
    text,
    these,
    transformers,
    unison-shared,
    unison-editor
