name:          unison-node
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors
synopsis:      The Unison programming language and platform
description:   The Unison typechecker and node

build-type:    Simple
extra-source-files:
  -- .travis.yml
  --.vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown

data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/platform.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison.ABT.Extra
    Unison.Distance.Extra
    Unison.Hash.Extra
    Unison.Kind.Extra
    Unison.NodeServer
    Unison.Reference.Extra
    Unison.Runtime.Remoting
    Unison.Runtime.TestRemoting
    Unison.Symbol.Extra
    Unison.Term.Extra
    Unison.TermEdit.Extra
    Unison.Type.Extra
    Unison.Runtime.Bits
    Unison.Runtime.Free
    Unison.Runtime.Stream
    Unison.Runtime.Pcbt
    Unison.Runtime.Unfold
    Unison.Runtime.Vector

  build-depends:
    aeson,
    applicative-extras,
    attoparsec,
    base,
    blaze-html,
    bytes,
    bytestring,
    byteable,
    cereal,
    containers,
    cryptohash,
    ctrie,
    directory,
    filepath,
    http-types,
    io-streams,
    mtl,
    network,
    network-simple,
    prelude-extras,
    scotty,
    sockaddr,
    text,
    transformers,
    transformers-compat,
    unison-shared,
    vector,
    wai-middleware-static,
    wai-extra

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

executable node
  main-is: Node.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    aeson,
    applicative-extras,
    attoparsec,
    base,
    blaze-html,
    bytes,
    bytestring,
    byteable,
    cereal,
    containers,
    cryptohash,
    directory,
    filepath,
    http-types,
    mtl,
    prelude-extras,
    scotty,
    text,
    transformers,
    transformers-compat,
    unison-node,
    unison-shared,
    vector,
    wai-middleware-static,
    wai-extra
