name:          unison-node
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors
synopsis:      The Unison programming language and platform
description:   The Unison typechecker and node

build-type:    Simple
extra-source-files:
  -- .travis.yml
  --.vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown

data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/platform.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

flag leveldb
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison.ABT.Extra
    Unison.Distance.Extra
    Unison.Hash.Extra
    Unison.Kind.Extra
    Unison.Metadata.Extra
    Unison.Node.UnisonBlockStore
    Unison.NodeContainer
    Unison.NodeServer
    Unison.NodeWorker
    Unison.NodeProtocol
    Unison.NodeProtocol.V0
    Unison.Reference.Extra
    Unison.Remote.Extra
    Unison.Runtime.Address
    Unison.Runtime.Block
    Unison.Runtime.ExpiringMap
    Unison.Runtime.ExtraBuiltins
    Unison.Runtime.Html
    Unison.Runtime.Http
    Unison.Runtime.Index
    Unison.Runtime.Journal
    Unison.Runtime.JournaledMap
    Unison.Runtime.JournaledTrie
    Unison.Runtime.Lock
    Unison.Runtime.Multiplex
    Unison.Runtime.Queue
    Unison.Runtime.Remote
    Unison.SerializationAndHashing
    Unison.BlockStore.MemBlockStore
    Unison.BlockStore.FileBlockStore
    Unison.Symbol.Extra
    Unison.Term.Extra
    Unison.TermEdit.Extra
    Unison.Type.Extra
    Unison.Runtime.Bits
    Unison.Runtime.Free
    Unison.Runtime.Stream
    Unison.Runtime.Pcbt
    Unison.Runtime.Unfold
    Unison.Runtime.Vector
    Unison.Runtime.ResourcePool
    Unison.Runtime.SharedResourceMap

  build-depends:
    acid-state,
    aeson,
    applicative-extras,
    async,
    attoparsec,
    base,
    base64-bytestring,
    blaze-html,
    bytes,
    bytestring,
    bytestring-trie,
    cacophony,
    cereal,
    containers,
    cryptonite,
    ctrie,
    curl,
    directory,
    filepath,
    free,
    hashable, 
    http-types,
    io-streams,
    list-t,
    memory,
    mtl,
    murmur-hash,
    network,
    network-simple,
    prelude-extras,
    process,
    random,
    safecopy,
    scotty,
    sockaddr,
    stm,
    stm-containers,
    text,
    tagsoup,
    time,
    transformers,
    transformers-compat,
    unagi-chan,
    unison-shared,
    vector,
    wai-extra,
    wai-middleware-static

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

  if flag(leveldb)
    build-depends: exceptions, leveldb-haskell
    exposed-modules:
                    Unison.BlockStore.LevelDbStore

executable worker
  main-is: Worker.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    async,
    base,
    base64-bytestring,
    bytes,
    bytestring,
    cereal,
    containers,
    cryptonite,
    curl,
    free,
    hashable,
    list-t,
    memory,
    mtl,
    stm,
    stm-containers,
    tagsoup,
    text,
    time,
    transformers,
    unison-node,
    unison-shared,
    vector

  if flag(leveldb)
    build-depends: exceptions, leveldb-haskell

executable container
  main-is: Container.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    acid-state,
    aeson,
    async,
    attoparsec,
    base,
    base64-bytestring,
    bytes,
    bytestring,
    bytestring-trie,
    cereal,
    containers,
    cryptonite,
    curl,
    directory,
    filepath,
    free,
    hashable,
    http-types,
    list-t,
    memory,
    mtl,
    process,
    safecopy,
    scotty,
    stm,
    stm-containers,
    text,
    time,
    transformers,
    unagi-chan,
    unison-node,
    unison-shared,
    vector,
    wai-extra,
    wai-middleware-static

  if flag(leveldb)
    build-depends: exceptions, leveldb-haskell

executable node
  main-is: Node.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    acid-state,
    aeson,
    applicative-extras,
    attoparsec,
    base,
    base64-bytestring,
    blaze-html,
    byteable,
    bytes,
    bytestring,
    cereal,
    containers,
    ctrie,
    curl,
    cryptonite,
    directory,
    filepath,
    free,
    hashable,
    http-types,
    list-t,
    memory,
    mtl,
    murmur-hash,
    prelude-extras,
    random,
    safecopy,
    scotty,
    stm,
    tagsoup,
    text,
    time,
    transformers,
    transformers-compat,
    unison-node,
    unison-shared,
    vector,
    wai-extra,
    wai-middleware-static

  if flag(leveldb)
    build-depends: exceptions, leveldb-haskell
    cpp-options: -Dleveldb

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Suite.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
  build-depends:
    QuickCheck,
    base,
    bytes,
    bytestring,
    containers,
    ctrie,
    curl,
    directory,
    hashable,
    random,
    stm,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-smallcheck,
    text,
    time,
    transformers,
    unison-node,
    unison-shared,
    vector

  if flag(leveldb)
    build-depends: exceptions, leveldb-haskell
    cpp-options: -Dleveldb
