name:          unison
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano 
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      https://github.com/pchiusano/unison
bug-reports:   https://github.com/pchiusano/unison/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors 
synopsis:      A purely functional language with transparent remote execution 
description:   - 

build-type:    Custom
extra-source-files:
  -- .travis.yml
  --.vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown

data-files:

source-repository head
  type: git
  location: git://github.com/pchiusano/unison.git

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison
    Unison.Edit.Term
    Unison.Edit.Term.Action
    Unison.Edit.Term.Eval
    Unison.Edit.Term.Eval.Interpreter
    Unison.Edit.Term.Path
    Unison.Edit.Type.Path
    Unison.Node
    Unison.Node.Store
    Unison.Node.Store.Memory
    Unison.Node.Store.File
    Unison.Node.Common
    Unison.Node.Metadata
    Unison.Node.Panel
    Unison.Node.Server
    Unison.Note
    Unison.Syntax
    Unison.Syntax.Distance
    Unison.Syntax.Hash
    Unison.Syntax.Kind
    Unison.Syntax.Reference
    Unison.Syntax.Term
    Unison.Syntax.Type
    Unison.Syntax.Var
    Unison.Type
    Unison.Type.Context
    Unison.Type.Context.Element

  build-depends:
    aeson                     >= 0.7.0.6,
    applicative-extras        >= 0.1.8,
    attoparsec                ,
    base                      >= 4,
    base64-bytestring         ,
    blaze-html                >= 0.7.0.0,
    bytestring                ,
    containers                >= 0.5,
    cryptohash                ,
    directory                 ,
    filepath                  ,
    lens                      >= 4.2, 
    mtl                       >= 2.1.1,
    prelude-extras            >= 0.3,
    scotty                    ,
    text                      >= 0.11.2,
    transformers              ,
    vector                    >= 0.10.11.0

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0


executable unison
  main-is: src/Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    unison,
    base,
    prelude-extras,
    lens,
    text

executable node
  main-is: src/Node.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  build-depends:
    unison,
    containers,
    base

test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        properties.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: properties
  other-modules:
    Syntax

  if !flag(properties)
    buildable: False
  else
    build-depends:
      unison,
      QuickCheck                 >= 2.4,
      quickcheck-instances       >= 0.3.1,
      tagged                     >= 0.4.4 && < 1,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2

