name:          unison-parser-typechecker
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Unison Computing, public benefit corp
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>, Runar Bjarnason <runarorama@gmail.com>, Arya Irani <arya.irani@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/unison/issues
copyright:     Copyright (C) 2013-2018 Unison Computing, PBC and contributors
synopsis:      Parser and typechecker for the Unison language
description:

build-type:    Simple
extra-source-files:
data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/unison.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison.Builtin
    Unison.Codecs
    Unison.Codebase
    Unison.Codebase.Branch
    Unison.Codebase.BranchDiff
    Unison.Codebase.BranchLoadMode
    Unison.Codebase.BranchUtil
    Unison.Codebase.Causal
    Unison.Codebase.Classes
    Unison.Codebase.CodeLookup
    Unison.Codebase.Editor.Command
    Unison.Codebase.Editor.DisplayThing
    Unison.Codebase.Editor.Git
    Unison.Codebase.Editor.HandleInput
    Unison.Codebase.Editor.HandleCommand
    Unison.Codebase.Editor.Input
    Unison.Codebase.Editor.Output
    Unison.Codebase.Editor.Output.BranchDiff
    Unison.Codebase.Editor.Propagate
    Unison.Codebase.Editor.RemoteRepo
    Unison.Codebase.Editor.SearchResult'
    Unison.Codebase.Editor.SlurpResult
    Unison.Codebase.Editor.SlurpComponent
    Unison.Codebase.Editor.TodoOutput
    Unison.Codebase.Editor.UriParser
    Unison.Codebase.FileCodebase
    Unison.Codebase.GitError
    Unison.Codebase.Metadata
    Unison.Codebase.NameEdit
    Unison.Codebase.Path
    Unison.Codebase.Patch
    Unison.Codebase.Reflog
    Unison.Codebase.Runtime
    Unison.Codebase.SearchResult
    Unison.Codebase.Serialization
    Unison.Codebase.Serialization.PutT
    Unison.Codebase.Serialization.V1
    Unison.Codebase.ShortBranchHash
    Unison.Codebase.TermEdit
    Unison.Codebase.TranscriptParser
    Unison.Codebase.TypeEdit
    Unison.Codebase.Watch
    Unison.Codebase.Execute
    Unison.Codebase.MainTerm
    Unison.CommandLine
    Unison.CommandLine.DisplayValues
    Unison.CommandLine.InputPattern
    Unison.CommandLine.InputPatterns
    Unison.CommandLine.Main
    Unison.CommandLine.OutputMessages
    Unison.DeclPrinter
    Unison.FileParser
    Unison.FileParsers
    Unison.Lexer
    Unison.NamePrinter
    Unison.Parser
    Unison.Parsers
    Unison.Path
    Unison.PrettyPrintEnv
    Unison.PrettyTerminal
    Unison.PrintError
    Unison.Result
    Unison.Runtime.ANF
    Unison.Runtime.IR
    Unison.Runtime.Rt1
    Unison.Runtime.Rt1IO
    Unison.Runtime.IOSource
    Unison.Runtime.Vector
    Unison.Runtime.SparseVector
    Unison.TermParser
    Unison.TermPrinter
    Unison.TypeParser
    Unison.TypePrinter
    Unison.Typechecker
    Unison.Typechecker.Components
    Unison.Typechecker.Context
    Unison.Typechecker.Extractor
    Unison.Typechecker.TypeError
    Unison.Typechecker.TypeLookup
    Unison.Typechecker.TypeVar
    Unison.UnisonFile
    Unison.Util.AnnotatedText
    Unison.Util.Bytes
    Unison.Util.ColorText
    Unison.Util.Exception
    Unison.Util.Free
    Unison.Util.Find
    Unison.Util.Less
    Unison.Util.Logger
    Unison.Util.Map
    Unison.Util.Menu
    Unison.Util.Pretty
    Unison.Util.Range
    Unison.Util.Star3
    Unison.Util.SyntaxText
    Unison.Util.TQueue
    Unison.Util.TransitiveClosure
    Unison.Util.CycleTable
    Unison.Util.CyclicEq
    Unison.Util.CyclicOrd

  build-depends:
    ansi-terminal,
    async,
    base,
    bifunctors,
    bytes,
    bytestring,
    cereal,
    containers,
    comonad,
    concurrent-supply,
    configurator,
    cryptonite,
    directory,
    guid,
    data-memocombinators,
    edit-distance,
    errors,
    exceptions,
    extra,
    filepath,
    filepattern,
    fingertree,
    free,
    fsnotify,
    fsutils,
    hashable,
    hashtables,
    haskeline,
    hex,
    io-streams,
    lens,
    ListLike,
    megaparsec >= 5.0.0 && < 7.0.0,
    memory,
    mmorph,
    monad-loops,
    mtl,
    murmur-hash,
    mutable-containers,
    network,
    network-simple,
    non-empty-sequence,
    process,
    random,
    raw-strings-qq,
    regex-base,
    regex-tdfa,
    safe,
    shellmet,
    split,
    stm,
    strings,
    terminal-size,
    text,
    time,
    transformers,
    unison-core,
    unliftio,
    util,
    vector

  ghc-options: -Wall -O0 -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures
  default-extensions:
    ApplicativeDo,
    DeriveFunctor,
    DoAndIfThenElse,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    MultiParamTypeClasses,
    -- OverloadedStrings,
    -- RecordWildCards,
    ScopedTypeVariables,
    TupleSections
    TypeApplications
    -- ViewPatterns

  if flag(optimized)
    ghc-options: -funbox-strict-fields

  if flag(quiet)
    ghc-options: -v0

executable unison
  main-is: Main.hs
  hs-source-dirs: unison
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures
  other-modules:
    Version
  build-depends:
    base,
    containers,
    directory,
    filepath,
    fsutils,
    safe,
    shellmet,
    template-haskell,
    temporary,
    text,
    unison-core,
    unison-parser-typechecker,
    unix

executable prettyprintdemo
  main-is: Main.hs
  hs-source-dirs: prettyprintdemo
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures
  build-depends:
    base,
    safe,
    text,
    unison-parser-typechecker

executable tests
  main-is:        Suite.hs
  ghc-options:    -W -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
    Unison.Test.ABT
    Unison.Test.Codebase
    Unison.Test.Codebase.Causal
    Unison.Test.Codebase.FileCodebase
    Unison.Test.Codebase.Path
    Unison.Test.ColorText
    Unison.Test.Common
    Unison.Test.DataDeclaration
    Unison.Test.FileParser
    Unison.Test.Git
    Unison.Test.Lexer
    Unison.Test.Range
    Unison.Test.Referent
    Unison.Test.Term
    Unison.Test.TermParser
    Unison.Test.TermPrinter
    Unison.Test.Type
    Unison.Test.TypePrinter
    Unison.Test.Typechecker
    Unison.Test.Typechecker.Components
    Unison.Test.Typechecker.Context
    Unison.Test.Typechecker.TypeError
    Unison.Test.UnisonSources
    Unison.Test.UriParser
    Unison.Test.Util.Bytes
    Unison.Test.Util.TMap
    Unison.Test.Var

  build-depends:
    base,
    bytestring,
    containers,
    directory,
    easytest,
    errors,
    extra,
    filepath,
    filemanip,
    here,
    lens,
    megaparsec,
    mtl,
    raw-strings-qq,
    shellmet,
    temporary,
    text,
    transformers,
    unison-core,
    unison-parser-typechecker

executable transcripts
  main-is:        Unison/Test/Transcripts.hs
  ghc-options:    -W -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
  build-depends:
    base,
    directory,
    easytest,
    filepath,
    shellmet,
    text,
    unison-core,
    unison-parser-typechecker
